// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoardTile renders correctly with password 1`] = `
<div>
  <a
    class="sc-bdvvtL hVgfSH"
    data-testid="board-tile"
    href="/boards/mockId"
  >
    <div
      class="sc-gsDKAQ bkuMRF"
    >
      <span
        class="material-icons"
      >
        lock_outlined
      </span>
    </div>
    <h4
      class="sc-dkPtRN jbOLNK"
    >
      Board name 1
    </h4>
    <p
      class="sc-eCImPb sc-jRQBWg gtDioY cTZnQP"
    >
      1 Jan 2022
    </p>
    <div
      class="sc-hKwDye dodXuz"
    >
      <p
        class="sc-eCImPb gtDioY"
      >
        cardCount
      </p>
      <div
        class="sc-pVTFL gcUIUu"
        data-testid="context-menu"
      >
        <button
          aria-controls="mockId"
          aria-expanded="false"
          aria-haspopup="menu"
          class="sc-jrQzAO iofoks"
        >
          <span
            class="material-icons"
          >
            more_horiz
          </span>
        </button>
        <nav
          class="sc-kDTinF kRnAor"
          id="mockId"
        >
          <ul
            class="sc-furwcr bzAVEx"
          >
            <li
              class="sc-iqseJM ezIeti"
              data-testid="context-menu-item"
            >
              <button
                class="sc-crHmcD hwlSgY"
              >
                <span
                  class="material-icons sc-egiyK kZTZNV"
                >
                  lock_outlined
                </span>
                contextMenu.removePassword
              </button>
            </li>
            <li
              class="sc-iqseJM ezIeti"
              data-testid="context-menu-item"
            >
              <button
                class="sc-crHmcD hwlSgY"
              >
                <span
                  class="material-icons sc-egiyK kZTZNV"
                >
                  delete_outlined
                </span>
                contextMenu.deleteBoard
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </a>
</div>
`;

exports[`BoardTile renders correctly without password 1`] = `
<div>
  <a
    class="sc-bdvvtL hVgfSH"
    data-testid="board-tile"
    href="/boards/mockId"
  >
    <h4
      class="sc-dkPtRN jbOLNK"
    >
      Board name 1
    </h4>
    <p
      class="sc-eCImPb sc-jRQBWg gtDioY cTZnQP"
    >
      1 Jan 2022
    </p>
    <div
      class="sc-hKwDye dodXuz"
    >
      <p
        class="sc-eCImPb gtDioY"
      >
        cardCount
      </p>
      <div
        class="sc-pVTFL gcUIUu"
        data-testid="context-menu"
      >
        <button
          aria-controls="mockId"
          aria-expanded="false"
          aria-haspopup="menu"
          class="sc-jrQzAO iofoks"
        >
          <span
            class="material-icons"
          >
            more_horiz
          </span>
        </button>
        <nav
          class="sc-kDTinF kRnAor"
          id="mockId"
        >
          <ul
            class="sc-furwcr bzAVEx"
          >
            <li
              class="sc-iqseJM ezIeti"
              data-testid="context-menu-item"
            >
              <button
                class="sc-crHmcD hwlSgY"
              >
                <span
                  class="material-icons sc-egiyK kZTZNV"
                >
                  lock_outlined
                </span>
                contextMenu.setPassword
              </button>
            </li>
            <li
              class="sc-iqseJM ezIeti"
              data-testid="context-menu-item"
            >
              <button
                class="sc-crHmcD hwlSgY"
              >
                <span
                  class="material-icons sc-egiyK kZTZNV"
                >
                  delete_outlined
                </span>
                contextMenu.deleteBoard
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </a>
</div>
`;
